# app/docs/swagger.json
@@ -8,9 +8,9 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/cluster/nodes": {
+        "/cluster/node": {
             "get": {
-                "description": "list nodes",
+                "description": "get current node infomation",
                 "consumes": [
                     "application/json"
                 ],
@@ -20,33 +20,7 @@
                 "tags": [
                     "cluster"
                 ],
-                "summary": "list nodes",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/types.Node"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/cluster/nodes/{nodeName}": {
-            "get": {
-                "description": "get node",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "cluster"
-                ],
-                "summary": "get node",
+                "summary": "get current node infomation",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -461,11 +435,18 @@
         "types.Node": {
             "type": "object",
             "required": [
-                "name"
+                "id",
+                "tasks"
             ],
             "properties": {
-                "name": {
+                "id": {
                     "type": "string"
+                },
+                "tasks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.Task"
+                    }
                 }
             }
         },
