# app/routes/v1.go
@@ -43,11 +43,7 @@ func New() (eng *gin.Engine) {
 
 		cluster := v1.Group("/cluster")
 		{
-			nodes := cluster.Group("/nodes")
-			{
-				nodes.GET("/:nodeName", clusterController.GetNode)
-			}
-			cluster.GET("/nodes", clusterController.ListNodes)
+			cluster.GET("/node", clusterController.GetNode)
 		}
 	}
 	return
